[package]
name = "brewcalc"
version = "0.1.2"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
description = "command line brewing calculator"
documentation = "https://docs.rs/crate/brewcalc"
homepage = "http://brewcalc.org"
repository = "https://github.com/andete/brewcalc"
keywords = ["brewing", "beer", "mead", "calculator"]
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "andete/brewcalc" }

[dependencies]
clap = "2.20"
